[gd_scene load_steps=2 format=3 uid="uid://cl0vg0wlg3oot"]

[ext_resource type="Script" uid="uid://cc04oyv4gglxu" path="res://UI_HUD/pause_menu.gd" id="1_b3t1n"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_b3t1n")

[node name="PauseTitle" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.0
offset_top = 86.0
offset_right = 68.0
offset_bottom = 149.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 45
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -20.0
offset_right = 30.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 27

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Return"

[node name="Retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
